--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -3,9 +3,8 @@
 
   <div class="form-inputs">
     <%= f.input :content %>
-    <%= f.input :post_id %>
-    <%= f.input :author_id %>
     <%= f.input :approved %>
+    <%= f.hidden_field :post_id %>
   </div>
 
   <div class="form-actions">
