--- a/app/views/comments/_form.html.haml
+++ b/app/views/comments/_form.html.haml
@@ -1,4 +1,4 @@
-= simple_form_for(@comment) do |f|
+= simple_form_for([@post, @post.comments.build]) do |f|
   = f.error_notification
   .form-inputs
     = f.input :content
