--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,7 +3,7 @@
   %head
     %meta{:charset => "utf-8"}/
     %meta{:content => "width=device-width, initial-scale=1.0", :name => "viewport"}/
-    %title= content_for?(:title) ? yield(:title) : "foundation-rails"
+    %title= content_for?(:title) ? yield(:title) : "Bloggy"
     = stylesheet_link_tag    "application"
     = javascript_include_tag "vendor/modernizr"
     = javascript_include_tag "application", 'data-turbolinks-track' => true
@@ -18,12 +18,12 @@
                 %a.button
                   Здравствуйте, #{current_user.username}
               %li
-                = link_to 'Выйти', destroy_user_session_path, :method => :delete, :class => "button"
+                = link_to 'Sign Out', destroy_user_session_path, :method => :delete, :class => "button"
             - else
               %li
-                = link_to 'Войти', new_user_session_path, :class => "button"
+                = link_to 'Sign In', new_user_session_path, :class => "button"
               %li
-                = link_to 'Зарегистрироваться', new_user_registration_path, :class => "button"
+                = link_to 'Sign Up', new_user_registration_path, :class => "button"
         %h1
           Bloggy
           %small Some easy app.
@@ -41,7 +41,11 @@
             %p © Bloggy
           .large-6.columns
             %ul.inline-list.right
-              %li
-                %a{:href => "#"} Sign In
-              %li
-                %a{:href => "#"} Sign Up
+              - if user_signed_in?              
+                %li
+                  = link_to 'Sign Out', destroy_user_session_path, :method => :delete
+              - else
+                %li
+                  = link_to 'Sign In', new_user_session_path
+                %li
+                  = link_to 'Sign Up', new_user_registration_path
