--- a/app/views/comments/_form.html.haml
+++ b/app/views/comments/_form.html.haml
@@ -1,7 +1,5 @@
-= simple_form_for(@post, Comment.new) do |f|
-  = f.error_notification
+= form_for [@post, @comment] do |f|
   .form-inputs
-    = f.input :content   
-    = f.hidden_field :post_id
+  = f.text_field :content   
   .form-actions
-    = f.button :submit
+  = f.submit "Post this comment", class: "button"
