Edit comments and some changes

--- a/app/views/comments/_comments.html.haml
+++ b/app/views/comments/_comments.html.haml
@@ -1,9 +1,9 @@
 - if @post.author == current_user
-  .large-6.large-centered.columns
+  .large-12.columns.panel
     = link_to "Moderate #{pluralize @comments.draft.size, ('comment')}", post_comments_path(@post), class: "button alert small"
     %br/  
 - else
-  .large-6.large-centered.columns.panel
+  .large-12.columns.panel
     %h4 
       My unsubmitted Comments
       - @comments.draft.where(:author => current_user).each do |comment|
@@ -12,10 +12,10 @@
           commented #{human_date(comment.created_at)}
         %p
           = simple_format(comment.content)
-        = link_to "Edit", edit_post_comment_path(params[:comment_id]), class: "button small"
+        = link_to "Edit", edit_post_comment_path(@post, comment), class: "button success"
         %hr/
 %br/  
-.large-6.large-centered.columns.panel
+.large-12.columns.panel
   %h4 Comments
   - @comments.approved.each do |comment|
     %p
